// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClaimButton matches snapshot for citizen with entitlement 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-justifyContent-1777fci"
    style={
      Object {
        "WebkitAlignItems": "stretch",
        "WebkitBoxAlign": "stretch",
        "alignItems": "stretch",
        "backgroundColor": "rgba(0,175,255,1.00)",
        "borderBottomColor": "rgba(0,175,255,1.00)",
        "borderBottomLeftRadius": "50px",
        "borderBottomRightRadius": "50px",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftColor": "rgba(0,175,255,1.00)",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightColor": "rgba(0,175,255,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopColor": "rgba(0,175,255,1.00)",
        "borderTopLeftRadius": "50px",
        "borderTopRightRadius": "50px",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "boxShadow": "0px 0.75px 1.5px rgba(0,0,0,0.24)",
        "display": "flex",
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "0px",
        "minHeight": "68px",
        "minWidth": "auto",
        "msFlexAlign": "stretch",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
      }
    }
  >
    <div
      className="css-cursor-18t94o4 css-view-1dbjc4n r-cursor-1loqt21 r-overflow-1udh08x r-position-bnwqim r-touchAction-1otgn73"
      data-focusable={true}
      disabled={false}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        Object {
          "borderBottomLeftRadius": "50px",
          "borderBottomRightRadius": "50px",
          "borderTopLeftRadius": "50px",
          "borderTopRightRadius": "50px",
        }
      }
      tabIndex="0"
    >
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
      >
        <div
          className="css-text-901oao css-textOneLine-bfa6kz r-letterSpacing-ud0q2t r-marginHorizontal-1ybube5 r-marginVertical-712mwr r-textAlign-q4m81j r-textTransform-tsynxw"
          dir="auto"
          style={
            Object {
              "color": "rgba(255,255,255,1.00)",
              "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontWeight": "500",
            }
          }
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406 r-textAlign-q4m81j"
            dir="auto"
            style={
              Object {
                "color": "rgba(255,255,255,1.00)",
                "fontFamily": "Roboto",
                "fontSize": "16px",
                "fontWeight": "500",
                "lineHeight": "22px",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            CLAIM YOUR SHARE - 
          </span>
          <div
            className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz"
            style={
              Object {
                "display": "flex",
                "marginLeft": "4px",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(255,255,255,1.00)",
                  "fontFamily": "Roboto",
                  "fontSize": "36px",
                  "fontWeight": "500",
                  "lineHeight": "36px",
                  "marginRight": "2px",
                  "textAlign": "right",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              1
            </span>
            <span
              className="css-text-901oao css-textHasAncestor-16my406 r-textAlign-q4m81j"
              dir="auto"
              style={
                Object {
                  "color": "rgba(66,69,74,1.00)",
                  "fontFamily": "Roboto",
                  "fontSize": "16px",
                  "fontWeight": "normal",
                  "lineHeight": "22px",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              <span
                className="css-text-901oao css-textHasAncestor-16my406"
                dir="auto"
                marginVertical="auto"
                style={
                  Object {
                    "color": "rgba(255,255,255,1.00)",
                    "fontFamily": "Roboto",
                    "fontSize": "16px",
                    "fontWeight": "500",
                    "lineHeight": "19px",
                    "textAlign": "right",
                    "textDecoration": "none",
                    "textTransform": "none",
                  }
                }
              >
                G
              </span>
              <span
                className="css-text-901oao css-textHasAncestor-16my406"
                dir="auto"
                marginVertical="auto"
                style={
                  Object {
                    "color": "rgba(255,255,255,1.00)",
                    "fontFamily": "Roboto",
                    "fontSize": "15.5px",
                    "fontWeight": "500",
                    "lineHeight": "19px",
                    "textAlign": "right",
                    "textDecoration": "none",
                    "textTransform": "none",
                  }
                }
              >
                $
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClaimButton matches snapshot for citizen without entitlement 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-justifyContent-1777fci"
    style={
      Object {
        "WebkitAlignItems": "stretch",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "vertical",
        "WebkitFlexDirection": "column",
        "alignItems": "stretch",
        "backgroundColor": "rgba(248,175,64,1.00)",
        "borderBottomColor": "rgba(0,175,255,1.00)",
        "borderBottomLeftRadius": "50px",
        "borderBottomRightRadius": "50px",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftColor": "rgba(0,175,255,1.00)",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightColor": "rgba(0,175,255,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopColor": "rgba(0,175,255,1.00)",
        "borderTopLeftRadius": "50px",
        "borderTopRightRadius": "50px",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "display": "flex",
        "flexDirection": "column",
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "0px",
        "minHeight": "68px",
        "minWidth": "auto",
        "msFlexAlign": "stretch",
        "msFlexDirection": "column",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
      }
    }
  >
    <div
      aria-disabled={true}
      className="css-view-1dbjc4n r-overflow-1udh08x r-position-bnwqim"
      disabled={true}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        Object {
          "borderBottomLeftRadius": "50px",
          "borderBottomRightRadius": "50px",
          "borderTopLeftRadius": "50px",
          "borderTopRightRadius": "50px",
        }
      }
    >
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
      >
        <div
          className="css-text-901oao css-textOneLine-bfa6kz r-letterSpacing-ud0q2t r-marginHorizontal-1ybube5 r-marginVertical-712mwr r-textAlign-q4m81j r-textTransform-tsynxw"
          dir="auto"
          style={
            Object {
              "color": "rgba(0,0,0,0.32)",
              "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontWeight": "500",
            }
          }
        >
          <div
            className="css-view-1dbjc4n r-display-xoduu5"
            style={
              Object {
                "WebkitBoxDirection": "normal",
                "WebkitBoxOrient": "vertical",
                "WebkitFlexDirection": "column",
                "flexDirection": "column",
                "msFlexDirection": "column",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406 r-textAlign-q4m81j"
              dir="auto"
              style={
                Object {
                  "color": "rgba(66,69,74,1.00)",
                  "fontFamily": "Roboto",
                  "fontSize": "16px",
                  "fontWeight": "700",
                  "letterSpacing": "0.08px",
                  "lineHeight": "22px",
                  "marginBottom": "8px",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              Your next daily claim:
            </span>
            <div
              className="css-view-1dbjc4n r-alignItems-1awozwy r-display-xoduu5 r-flexDirection-18u37iz r-justifyContent-1777fci"
              style={
                Object {
                  "WebkitBoxFlex": 1,
                  "WebkitFlexGrow": 1,
                  "flexGrow": 1,
                  "msFlexPositive": 1,
                }
              }
            >
              <span
                className="css-text-901oao css-textHasAncestor-16my406 r-textAlign-q4m81j"
                dir="auto"
                style={
                  Object {
                    "color": "rgba(255,255,255,1.00)",
                    "fontFamily": "Roboto",
                    "fontSize": "36px",
                    "fontWeight": "700",
                    "lineHeight": "30px",
                    "marginTop": "-4px",
                    "textDecoration": "none",
                    "textTransform": "none",
                    "width": "25px",
                  }
                }
              >
                0
              </span>
              <span
                className="css-text-901oao css-textHasAncestor-16my406 r-textAlign-q4m81j"
                dir="auto"
                style={
                  Object {
                    "color": "rgba(255,255,255,1.00)",
                    "fontFamily": "Roboto",
                    "fontSize": "36px",
                    "fontWeight": "700",
                    "lineHeight": "30px",
                    "marginTop": "-4px",
                    "textDecoration": "none",
                    "textTransform": "none",
                    "width": "25px",
                  }
                }
              >
                0
              </span>
              <span
                className="css-text-901oao css-textHasAncestor-16my406 r-textAlign-q4m81j"
                dir="auto"
                style={
                  Object {
                    "color": "rgba(255,255,255,1.00)",
                    "fontFamily": "Roboto",
                    "fontSize": "36px",
                    "fontWeight": "700",
                    "lineHeight": "30px",
                    "marginTop": "-4px",
                    "textDecoration": "none",
                    "textTransform": "none",
                    "width": "10px",
                  }
                }
              >
                :
              </span>
              <span
                className="css-text-901oao css-textHasAncestor-16my406 r-textAlign-q4m81j"
                dir="auto"
                style={
                  Object {
                    "color": "rgba(255,255,255,1.00)",
                    "fontFamily": "Roboto",
                    "fontSize": "36px",
                    "fontWeight": "700",
                    "lineHeight": "30px",
                    "marginTop": "-4px",
                    "textDecoration": "none",
                    "textTransform": "none",
                    "width": "25px",
                  }
                }
              >
                1
              </span>
              <span
                className="css-text-901oao css-textHasAncestor-16my406 r-textAlign-q4m81j"
                dir="auto"
                style={
                  Object {
                    "color": "rgba(255,255,255,1.00)",
                    "fontFamily": "Roboto",
                    "fontSize": "36px",
                    "fontWeight": "700",
                    "lineHeight": "30px",
                    "marginTop": "-4px",
                    "textDecoration": "none",
                    "textTransform": "none",
                    "width": "25px",
                  }
                }
              >
                0
              </span>
              <span
                className="css-text-901oao css-textHasAncestor-16my406 r-textAlign-q4m81j"
                dir="auto"
                style={
                  Object {
                    "color": "rgba(255,255,255,1.00)",
                    "fontFamily": "Roboto",
                    "fontSize": "36px",
                    "fontWeight": "700",
                    "lineHeight": "30px",
                    "marginTop": "-4px",
                    "textDecoration": "none",
                    "textTransform": "none",
                    "width": "10px",
                  }
                }
              >
                :
              </span>
              <span
                className="css-text-901oao css-textHasAncestor-16my406 r-textAlign-q4m81j"
                dir="auto"
                style={
                  Object {
                    "color": "rgba(255,255,255,1.00)",
                    "fontFamily": "Roboto",
                    "fontSize": "36px",
                    "fontWeight": "700",
                    "lineHeight": "30px",
                    "marginTop": "-4px",
                    "textDecoration": "none",
                    "textTransform": "none",
                    "width": "25px",
                  }
                }
              >
                0
              </span>
              <span
                className="css-text-901oao css-textHasAncestor-16my406 r-textAlign-q4m81j"
                dir="auto"
                style={
                  Object {
                    "color": "rgba(255,255,255,1.00)",
                    "fontFamily": "Roboto",
                    "fontSize": "36px",
                    "fontWeight": "700",
                    "lineHeight": "30px",
                    "marginTop": "-4px",
                    "textDecoration": "none",
                    "textTransform": "none",
                    "width": "25px",
                  }
                }
              >
                0
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClaimButton matches snapshot for non-citizen 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-justifyContent-1777fci"
    style={
      Object {
        "WebkitAlignItems": "stretch",
        "WebkitBoxAlign": "stretch",
        "alignItems": "stretch",
        "backgroundColor": "rgba(0,0,0,0.12)",
        "borderBottomColor": "rgba(0,175,255,1.00)",
        "borderBottomLeftRadius": "50px",
        "borderBottomRightRadius": "50px",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftColor": "rgba(0,175,255,1.00)",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightColor": "rgba(0,175,255,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopColor": "rgba(0,175,255,1.00)",
        "borderTopLeftRadius": "50px",
        "borderTopRightRadius": "50px",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "display": "flex",
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "0px",
        "minHeight": "68px",
        "minWidth": "auto",
        "msFlexAlign": "stretch",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
      }
    }
  >
    <div
      aria-disabled={true}
      className="css-view-1dbjc4n r-overflow-1udh08x r-position-bnwqim"
      disabled={true}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        Object {
          "borderBottomLeftRadius": "50px",
          "borderBottomRightRadius": "50px",
          "borderTopLeftRadius": "50px",
          "borderTopRightRadius": "50px",
        }
      }
    >
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
      >
        <div
          className="css-text-901oao css-textOneLine-bfa6kz r-letterSpacing-ud0q2t r-marginHorizontal-1ybube5 r-marginVertical-712mwr r-textAlign-q4m81j r-textTransform-tsynxw"
          dir="auto"
          style={
            Object {
              "color": "rgba(0,0,0,0.32)",
              "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontWeight": "500",
            }
          }
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406 r-textAlign-q4m81j"
            dir="auto"
            style={
              Object {
                "color": "rgba(255,255,255,1.00)",
                "fontFamily": "Roboto",
                "fontSize": "16px",
                "fontWeight": "500",
                "lineHeight": "22px",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            CLAIM YOUR SHARE - 
          </span>
          <div
            className="css-view-1dbjc4n r-flexDirection-18u37iz"
            style={
              Object {
                "WebkitAlignItems": "baseline",
                "WebkitBoxAlign": "baseline",
                "alignItems": "baseline",
                "display": "inline",
                "marginLeft": "4px",
                "msFlexAlign": "baseline",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(255,255,255,1.00)",
                  "fontFamily": "Roboto",
                  "fontSize": "16px",
                  "fontWeight": "500",
                  "lineHeight": "36px",
                  "marginRight": "2px",
                  "textAlign": "right",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              0
            </span>
            <span
              className="css-text-901oao css-textHasAncestor-16my406 r-textAlign-q4m81j"
              dir="auto"
              style={
                Object {
                  "color": "rgba(66,69,74,1.00)",
                  "fontFamily": "Roboto",
                  "fontSize": "16px",
                  "fontWeight": "normal",
                  "lineHeight": "22px",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              <span
                className="css-text-901oao css-textHasAncestor-16my406"
                dir="auto"
                marginVertical="auto"
                style={
                  Object {
                    "color": "rgba(255,255,255,1.00)",
                    "fontFamily": "Roboto",
                    "fontSize": "10px",
                    "fontWeight": "500",
                    "lineHeight": "19px",
                    "textAlign": "right",
                    "textDecoration": "none",
                    "textTransform": "none",
                  }
                }
              >
                G
              </span>
              <span
                className="css-text-901oao css-textHasAncestor-16my406"
                dir="auto"
                marginVertical="auto"
                style={
                  Object {
                    "color": "rgba(255,255,255,1.00)",
                    "fontFamily": "Roboto",
                    "fontSize": "9.5px",
                    "fontWeight": "500",
                    "lineHeight": "19px",
                    "textAlign": "right",
                    "textDecoration": "none",
                    "textTransform": "none",
                  }
                }
              >
                $
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
